--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
-{
-	language: "node_js",
-	before_install: [
-		"sudo apt-get install cimg-dev libphash0-dev libmagickcore-dev"
-	],
-	node_js: [ "0.8", "0.10" ]
-} 
+language: node_js
+
+node_js:
+    - "0.10"
+
+before_install:
+    - "sudo apt-get install cimg-dev libphash0-dev libmagickcore-dev"
