--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,17 @@ node_js:
 
 before_install:
     - "sudo apt-get install cimg-dev libphash0-dev libmagickcore-dev"
+    - npm install -g npm
+
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - g++-4.8
+
+env:
+  - CXX=g++-4.8
 
 node_js:
   - "6"
